# WakeBuilder

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  clean.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/workflows/: docs.yml
data/noise/: noise_index.json
docs/: API.md  ARCHITECTURE.md  PHASE1_COMPLETE.md  base_model_selection.md  mkdocs.yml  phase2_training_pipeline.md  phase_0_completion_summary.md
docs/docs/: index.md
docs/docs/about/: acknowledgments.md  history.md  index.md  license.md  roadmap.md
docs/docs/configuration/: audio-settings.md  augmentation.md  hyperparameters.md  index.md  model-options.md
docs/docs/contributing/: code-style.md  development-setup.md  index.md  pull-requests.md  testing.md
docs/docs/deployment/: docker.md  index.md  local-development.md  production.md
docs/docs/getting-started/: installation.md  quick-start.md  what-is-wake-word.md
docs/docs/javascripts/: mathjax.js
docs/docs/reference/: api-endpoints.md  data-formats.md  index.md  project-structure.md  scripts.md
docs/docs/stylesheets/: extra.css
docs/docs/technical/: architecture.md  ast-model.md  audio-processing.md  data-generation.md  hard-negatives.md  index.md  model-evaluation.md  onnx-export.md  training-pipeline.md  tts-providers.md
docs/docs/user-guide/: best-practices.md  first-model.md  index.md  model-management.md  testing-models.md  training-workflow.md  web-interface.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  audio.js  charts.js  tester.js  trainer.js  utils.js
models/base/: model.json  model.pt  yamnet_installed.txt
models/custom/hey_siri/: metadata.json  training_history.json
models/custom/samix/: metadata.json  model.pt  training_history.json
models/hi_alexa_bc_resnet/: metadata.json  model.pt  training_history.json
models/hi_alexa_tc_resnet/: metadata.json  model.pt  training_history.json
project_spec/: wakebuilder_project_description.md  wakebuilder_project_plan.md  wakebuilder_todo.md
scripts/: analyze_model.py  benchmark_models.py  build_negative_cache.py  compare_domains.py  convert_mp3_to_wav.py  coqui_multispeaker_models.py  diagnose_model.py  download_base_model.py  download_voices.py  explore_coqui_tts.py  piper_tts_voices.json  preload_tts_models.py  prepare_noise.py  preview_coqui_tts.py  preview_edge_tts.py  preview_kokoro_tts.py  test_hard_negatives.py  test_model_direct.py  test_training_data.py  train_improved.py  train_wake_word.py  verify_model.py
src/wakebuilder/: __init__.py  config.py
src/wakebuilder/audio/: __init__.py  augmentation.py  negative_generator.py  preprocessing.py  real_data_loader.py
src/wakebuilder/backend/: __init__.py  jobs.py  main.py  schemas.py
src/wakebuilder/backend/routes/: __init__.py  cache.py  models.py  testing.py  training.py
src/wakebuilder/frontend/: __init__.py
src/wakebuilder/models/: __init__.py  base_model.py  classifier.py  trainer.py
src/wakebuilder/training/: Audio_Classification_on_Keyword_Spotting.ipynb  __init__.py
src/wakebuilder/tts/: __init__.py  coqui_generator.py  edge_generator.py  generator.py  kokoro_generator.py
tests/: __init__.py  conftest.py  test_api.py  test_ast_model.py  test_augmentation.py  test_base_model.py  test_config.py  test_foundation.py  test_hard_negatives.py  test_preprocessing.py  test_training.py  test_training_data.py
