[project]
name = "wakebuilder"
version = "0.1.0"
description = "A comprehensive training platform for creating custom wake word detection models locally"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "WakeBuilder Team"}
]
license = {text = "Apache-2.0"}
keywords = ["wake-word", "speech-recognition", "voice-assistant", "machine-learning", "audio-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.121.3",
    "librosa>=0.11.0",
    "numpy>=2.3.5",
    "piper-tts>=1.3.0",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.1",
    "tensorflow>=2.20.0",
    "tensorflow-hub>=0.16.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
]
